--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -10,9 +10,8 @@ html, body {
 	margin:auto;
 	height:100%;
 	width:100%;
-	min-width: 1200px;
-	min-height: 400px;
 	font-size: 100%;
+	scroll-behavior: smooth;
 
 }
 
@@ -91,7 +90,6 @@ a
 	position:absolute;
 	top:10%;
 	left:40%;
-	font-size:150%;
 	padding-right:5%;
 }
 
@@ -158,21 +156,78 @@ a
   font-size: 12px;
 }
 
-.carousel{
-	text-align: center;
-	height: 100%;
-	flex:1;
-	background-size: 100% 100%;
-}
 
 
-.carousel-item
-{
-	background-size: 100% 100%;
+.cathedral{
 	color:white;
+	padding-top:5%;
+	display: flex;
+	background-size: 100% 100%;
+	height: 100%;
+	width:100%;
+	object-fit: contain;
+}
+.cathedral p{
+	padding-left: 3%;
+	text-align: left;
+	position:absolute;
+	left:35%;
+	padding-top: 5%;
 }
 
-.carousel-inner{
+.cathedral h1{
+	padding-left: 3%;
+	text-align: left;
+	position:absolute;
+	left:35%;
+
+}
+.cathedral video
+{
+	position: absolute;
+	left:12%;
+	padding-top:5%;
+}
+
+
+.rhcp-site
+{
+	color:white;
+	top:200%;
+	padding-top: 3%
+	display: flex;
+	background-size: 100% 100%;
+	height: 100%;
+	width:100%;
+	object-fit: contain;
+
+}
+
+.rhcp-site h1{
+	text-align: center;
+	padding-top: 2%;
+}
+
+.rhcp-site video
+{
+	position: absolute;
+	left:5%;
+	padding-top:3%;
+}
+
+
+.rhcp-site p
+{
+	padding-top: 3%;
+	text-align: left;
+	position:absolute;
+	left:55%;
+}
+
+.food-tracker{
+	color:white;
+	top:100%;
+	padding-top: 3%
 	display: flex;
 	background-size: 100% 100%;
 	height: 100%;
@@ -180,62 +235,123 @@ a
 	object-fit: contain;
 }
 
-.carousel-inner p{
-	text-align: left;
-	position:absolute;
-	left:35%;
-	font-size: 120%;
-}
-
-
-.cathedral{
-	padding-top:3%;
-}
-.cathedral p{
-	padding-left: 3%;
-}
-.cathedral video
-{
-	position: absolute;
-	left:12%;
-}
-
-.rhcp-site video
-{
-	position: relative;
-	left:-15%;
-}
-
-.rhcp-site
-{
-	padding-top: 3%;
-}
-
-.rhcp-site p
-{
-	position: absolute;
-	left:62%;
-	width: 35%;
-	top:15%;
-}
-
-.food-tracker{
-	padding-top: 3%
-}
-
-.sname{
-	padding-top: 3%
-}
-
 .food-tracker video
 {
+	padding-top:5%;
 	position: absolute;
 	right:12%;
 }
 
 .food-tracker p
 {
+	padding-top:8%;
 	position: absolute;
 	left:12%;
 	width:40%;
+}
+
+.food-tracker h1
+{
+	padding-top:4%;
+	position: absolute;
+	left:12%;
+	width:40%;
+}
+
+.sname{
+	color:white;
+	top:100%;
+	padding-top: 3%
+	display: flex;
+	background-size: 100% 100%;
+	height: 100%;
+	width:100%;
+	object-fit: contain;
+}
+
+.sname h1{
+	text-align: center;
+	padding-top: 1%;
+}
+
+#upBtn {
+	display:none;
+	width:10%;
+	align: center;
+	text-align: center;
+  position: fixed; /* Fixed/sticky position */
+  top: 10px; /* Place the button at the bottom of the page */
+	right:42%;
+  z-index: 99; /* Make sure it does not overlap */
+
+
+}
+
+#upBtn:hover {
+  background-color: #555; /* Add a dark-grey background on hover */
+	opacity: 20%;
+}
+
+#downBtn {
+	width:10%;
+	align: center;
+	text-align: center;
+  position: fixed; /* Fixed/sticky position */
+  bottom: 10px; /* Place the button at the bottom of the page */
+	right:42%;
+  z-index: 99; /* Make sure it does not overlap */
+
+
+}
+
+#downBtn:hover {
+  background-color: #555; /* Add a dark-grey background on hover */
+	opacity: 20%;
+}
+
+@media only screen and (min-width: 600px) {
+	h1{
+		font-size: 150%;
+	}
+
+	p{
+		font-size: 80%;
+	}
+
+	.cathedral h1{
+		padding-left: 3%;
+		text-align: left;
+		position:absolute;
+		left:40%;
+	}
+
+
+
+	.cathedral p{
+		padding-left: 3%;
+		text-align: left;
+		position:absolute;
+		left:40%;
+		padding-top: 5%;
+	}
+}
+
+@media only screen and (min-width: 992px) {
+	h1{
+		font-size: 180%;
+	}
+	p{
+		font-size: 100%;
+	}
+
+
+}
+
+@media only screen and (min-width: 1200px) {
+	h1{
+		font-size: 250%;
+	}
+	p{
+		font-size: 120%
+	}
 }
