--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -58,18 +58,6 @@ a
 	font-size: 150%;
 }
 
-.project
-{
-	background-image: url('window.jpg');
-	background-size: 100% 100%;
-	height:90%;
-	text-align: center;
-	flex:1;
-  padding: 10px;
-  color: white;
-  font-size: 12px;
-
-}
 
 
 
@@ -149,139 +137,110 @@ a
 	font-size: 120%;
 }
 
-.myInner{
-	flex:1;
-	text-align: center;
-  color: black;
-  font-size: 12px;
-}
 
 
-
-.cathedral{
+.image-box-1{
+	float:left;
 	color:white;
 	padding-top:5%;
-	display: flex;
 	background-size: 100% 100%;
 	height: 100%;
-	width:100%;
+	width:50%;
 	object-fit: contain;
-}
-.cathedral p{
-	padding-left: 3%;
-	text-align: left;
-	position:absolute;
-	left:35%;
-	padding-top: 5%;
-}
-
-.cathedral h1{
-	padding-left: 3%;
-	text-align: left;
-	position:absolute;
-	left:35%;
+	text-align: center;
 
 }
-.cathedral video
-{
-	position: absolute;
-	left:12%;
+
+.image-box-1 video{
+	position:relative;
 	padding-top:5%;
 }
 
-
-.rhcp-site
-{
+.text-box-1{
+	background-color: #afeeee;
 	color:white;
-	top:200%;
-	padding-top: 3%
+	padding-top:15%;
 	display: flex;
-	background-size: 100% 100%;
 	height: 100%;
-	width:100%;
-	object-fit: contain;
-
-}
-
-.rhcp-site h1{
+	width:50%;
 	text-align: center;
-	padding-top: 2%;
 }
 
-.rhcp-site video
-{
-	position: absolute;
-	left:5%;
-	padding-top:3%;
-}
-
-
-.rhcp-site p
-{
-	padding-top: 3%;
-	text-align: left;
+.text-box-1 h1{
 	position:absolute;
-	left:55%;
-}
-
-.food-tracker{
-	color:white;
-	top:100%;
-	padding-top: 3%
-	display: flex;
-	background-size: 100% 100%;
-	height: 100%;
-	width:100%;
-	object-fit: contain;
-}
-
-.food-tracker video
-{
-	padding-top:5%;
-	position: absolute;
-	right:12%;
-}
-
-.food-tracker p
-{
-	padding-top:8%;
-	position: absolute;
-	left:12%;
-	width:40%;
-}
-
-.food-tracker h1
-{
-	padding-top:4%;
-	position: absolute;
-	left:12%;
-	width:40%;
-}
-
-.sname{
-	color:white;
-	top:100%;
-	padding-top: 3%
-	display: flex;
-	background-size: 100% 100%;
-	height: 100%;
-	width:100%;
-	object-fit: contain;
-}
-
-.sname h1{
+	height:10%;
+	width:50%;
 	text-align: center;
-	padding-top: 1%;
+	align-content: center;
+
+
 }
+
+.text-box-1 p{
+	position:absolute;
+	margin-top: 5%;
+	text-align: center;
+}
+
+.image-box-2{
+	color:white;
+	padding-top:5%;
+	background-size: 100% 100%;
+	height: 100%;
+	width:50%;
+	float:right;
+	text-align: center;
+
+
+
+}
+
+.image-box-2 video{
+	position: relative;
+	padding-top:5%;
+
+}
+
+.text-box-2{
+	background-color: #afe4ee;
+	position:relative;
+	float:left;
+	color:white;
+	height: 100%;
+	width:50%;
+	object-fit: contain;
+	display: flex;
+
+
+}
+
+.text-box-2 h1{
+	padding-top: 20%;
+	position:absolute;
+	height:10%;
+	width:100%;
+	text-align: center;
+	align-content: center;
+
+
+}
+
+.text-box-2 p{
+	position:absolute;
+	padding-top: 30%;
+	text-align: center;
+}
+
+
+
 
 #upBtn {
 	display:none;
 	width:10%;
-	align: center;
-	text-align: center;
+	left: 50%;
+  transform: translate(-50%, 0);
   position: fixed; /* Fixed/sticky position */
   top: 10px; /* Place the button at the bottom of the page */
-	right:42%;
   z-index: 99; /* Make sure it does not overlap */
 
 
@@ -294,8 +253,8 @@ a
 
 #downBtn {
 	width:10%;
-	align: center;
-	text-align: center;
+	left: 50%;
+  transform: translate(-50%, 0);
   position: fixed; /* Fixed/sticky position */
   bottom: 10px; /* Place the button at the bottom of the page */
 	right:42%;
@@ -309,49 +268,64 @@ a
 	opacity: 20%;
 }
 
-@media only screen and (min-width: 600px) {
-	h1{
-		font-size: 150%;
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 768px)
+{
+	.mobile-image
+	{
+		color:white;
+		padding-top:5%;
+		background-size: 100% 100%;
+		height: 100%;
+		width:100%;
+		object-fit: contain;
+		text-align: center;
 	}
-
-	p{
-		font-size: 80%;
-	}
-
-	.cathedral h1{
-		padding-left: 3%;
-		text-align: left;
-		position:absolute;
-		left:40%;
-	}
-
-
-
-	.cathedral p{
-		padding-left: 3%;
-		text-align: left;
-		position:absolute;
-		left:40%;
-		padding-top: 5%;
-	}
-}
-
-@media only screen and (min-width: 992px) {
-	h1{
-		font-size: 180%;
-	}
-	p{
-		font-size: 100%;
+	.mobile-text
+	{
+		background-color: #afeeee;
+		color:white;
+		padding-top:15%;
+		display: flex;
+		height: 100%;
+		width:100%;
+		text-align: center;
 	}
 
 
 }
 
-@media only screen and (min-width: 1200px) {
-	h1{
+@media only screen and (min-width: 768px)
+{
+	.text-box-1 h1{
+		font-size: 200%;
+	}
+
+	.text-box-2 h1{
+		font-size: 200%;
+	}
+}
+
+
+@media only screen and (min-width: 992px)
+{
+	.text-box-1 h1{
+		font-size: 220%;
+	}
+
+	.text-box-2 h1{
+		font-size: 220%;
+	}
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px)
+{
+	.text-box-1 h1{
 		font-size: 250%;
 	}
-	p{
-		font-size: 120%
+
+	.text-box-2 h1{
+		font-size: 250%;
 	}
 }
