--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -277,7 +277,7 @@ a
   height: 100%; /* 100% Full-height */
   width: 0; /* 0 width - change this with JavaScript */
   position: fixed; /* Stay in place */
-  z-index: 1; /* Stay on top */
+  z-index: 30; /* Stay on top */
   top: 0; /* Stay at the top */
   left: 0;
   background-color: #111; /* Black*/
@@ -375,6 +375,7 @@ a
 		position:fixed;
 		top:10px;
 		left:5px;
+		z-index: 20;
 	}
 
 
