--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -320,7 +320,7 @@ a
 	display:none;
 }
 
-embed{
+.CV iframe{
 	width:60%;
 	height:100%;
 	position: relative;
@@ -332,7 +332,7 @@ embed{
 {
 	background-color: #afeeee;
 	position:relative;
-	top:15%;
+	top:10%;
 	height:100%;
 	text-align: center;
 }
