--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -162,6 +162,7 @@ a
 	padding-top:5%;
 	background-size: 100% 100%;
 	height: 100%;
+	background-color:#afe4ee;
 	width:50%;
 	float:right;
 	text-align: center;
