--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -13,6 +13,7 @@ html, body {
 	font-size: 100%;
 	min-height: 350px;
 	scroll-behavior: smooth;
+	max-width: 100%;
 
 }
 
@@ -356,6 +357,11 @@ a
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (max-width: 768px)
 {
+	html, body {
+
+		min-width: 431px;
+
+	}
 	.contact p {
 		left:35%;
 	}
