--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -376,7 +376,8 @@ a
 		float:right;
 		position:absolute;
 		grid-template-columns: 40%;
-	  display: grid;
+	  display: flex;
+		flex-direction: column;
 		width:40%;
 	  top:25%;
 		left:52%;
@@ -391,9 +392,9 @@ a
 
 	.grid-item-2 {
 
-		padding: 32%;
+		padding: 12%;
 		font-size: 75%;
-		text-align: center;
+		text-align: left;
 	}
 
 	#downBtn{
